fix(responsive): :iphone: fix issue with horizontal scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,6 +55,9 @@
   }
   body {
     @apply bg-background text-foreground;
-    @apply overflow-x-hidden;
   }
+}
+
+html {
+  @apply overflow-x-hidden;
 }
